--- a/SMSStation/Dokumentointi/pit-reports/fi.intoit.smsstation/Main.java.html
+++ b/SMSStation/Dokumentointi/pit-reports/fi.intoit.smsstation/Main.java.html
@@ -55,11 +55,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_1'/>
 1
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_1'></a>
 </td>
 <td class=''><pre><span  class=''>/*</span></pre></td></tr>
 
@@ -67,11 +67,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_2'/>
 2
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_2'></a>
 </td>
 <td class=''><pre><span  class=''> * (c) Lauri Savolainen / intoit oy</span></pre></td></tr>
 
@@ -79,11 +79,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_3'/>
 3
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_3'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -91,11 +91,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_4'/>
 4
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_4'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -103,11 +103,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_5'/>
 5
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_5'></a>
 </td>
 <td class=''><pre><span  class=''>package fi.intoit.smsstation;</span></pre></td></tr>
 
@@ -115,11 +115,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_6'/>
 6
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_6'></a>
 </td>
 <td class=''><pre><span  class=''></span></pre></td></tr>
 
@@ -127,11 +127,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_7'/>
 7
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_7'></a>
 </td>
 <td class=''><pre><span  class=''>/**</span></pre></td></tr>
 
@@ -139,11 +139,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_8'/>
 8
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_8'></a>
 </td>
 <td class=''><pre><span  class=''> *</span></pre></td></tr>
 
@@ -151,11 +151,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_9'/>
 9
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_9'></a>
 </td>
 <td class=''><pre><span  class=''> * @author lasa</span></pre></td></tr>
 
@@ -163,11 +163,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_10'/>
 10
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_10'></a>
 </td>
 <td class=''><pre><span  class=''> */</span></pre></td></tr>
 
@@ -175,11 +175,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_11'/>
 11
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_11'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>public class Main {</span></pre></td></tr>
 
@@ -187,11 +187,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_12'/>
 12
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_12'></a>
 </td>
 <td class=''><pre><span  class=''>    public static void main(String[] Args) {</span></pre></td></tr>
 
@@ -199,11 +199,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_13'/>
 13
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_13'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>        Settings settings = new Settings();</span></pre></td></tr>
 
@@ -211,11 +211,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_14'/>
 14
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_14'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_14'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        settings.setGSMNumber(&#34;050-555333222&#34;);</span></pre></td></tr>
 
@@ -223,11 +223,11 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_15'/>
 15
 </td>
 <td class='survived'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_15'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_15'>1</a>
 </td>
 <td class='uncovered'><pre><span  class='survived'>        System.out.println(&#34;Asetettiin puhelinnumeroksi: &#34; + settings.getGSMNumber());</span></pre></td></tr>
 
@@ -235,11 +235,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_16'/>
 16
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_16'></a>
 </td>
 <td class=''><pre><span  class=''>        </span></pre></td></tr>
 
@@ -247,11 +247,47 @@ padding-left: 5px;
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_17'/>
 17
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_17'></a>
+</td>
+<td class='uncovered'><pre><span  class=''>        SMSStore store = new SMSStore();</span></pre></td></tr>
+
+
+
+<tr>
+<td class='uncovered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_18'/>
+18
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_18'></a>
+</td>
+<td class='uncovered'><pre><span  class=''>        QueueWorker queueWorker = new QueueWorker(store);</span></pre></td></tr>
+
+
+
+<tr>
+<td class='na'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_19'/>
+19
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_19'></a>
+</td>
+<td class=''><pre><span  class=''>        </span></pre></td></tr>
+
+
+
+<tr>
+<td class='uncovered'>
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_20'/>
+20
+</td>
+<td class=''>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_20'></a>
 </td>
 <td class='uncovered'><pre><span  class=''>    }</span></pre></td></tr>
 
@@ -259,11 +295,11 @@ padding-left: 5px;
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@3e2e5f_18'/>
-18
+<a name='org.pitest.mutationtest.report.html.SourceFile@d0e678_21'/>
+21
 </td>
 <td class=''>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_21'></a>
 </td>
 <td class=''><pre><span  class=''>}</span></pre></td></tr>
 
@@ -274,22 +310,22 @@ padding-left: 5px;
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3e2e5f_14'>14</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@d0e678_14'>14</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_14'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_14'/> 
 
 <p class='NO_COVERAGE'>removed call to fi/intoit/smsstation/Settings::setGSMNumber : NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@3e2e5f_15'>15</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@d0e678_15'>15</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@3e2e5f_15'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@d0e678_15'/> 
 
 <p class='NO_COVERAGE'>removed call to java/io/PrintStream::println : NO_COVERAGE</p> 
 </td>
