--- a/SMSStation/Dokumentointi/pit-reports/fi.intoit.smsstation/index.html
+++ b/SMSStation/Dokumentointi/pit-reports/fi.intoit.smsstation/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>4</td>
-            <td>77% <div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">30/39</div></div></td>
-            <td>80% <div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">8/10</div></div></td>
+            <td>6</td>
+            <td>65% <div class="coverage_bar"><div class="coverage_complete" style="width:65%"></div><div class="coverage_ledgend">45/69</div></div></td>
+            <td>66% <div class="coverage_bar"><div class="coverage_complete" style="width:66%"></div><div class="coverage_ledgend">19/29</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,8 +93,14 @@
 
         <tr>
             <td><a href="./Main.java.html">Main.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/5</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/7</div></div></td>
             <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/2</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./QueueWorker.java.html">QueueWorker.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/11</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/5</div></div></td>
         </tr>
 
         <tr>
@@ -104,9 +110,15 @@
         </tr>
 
         <tr>
+            <td><a href="./SMSQueue.java.html">SMSQueue.java</a></td>
+            <td><div class="coveragePercentage">88% </div><div class="coverage_bar"><div class="coverage_complete" style="width:88%"></div><div class="coverage_ledgend">14/16</div></div></td>
+            <td><div class="coveragePercentage">77% </div><div class="coverage_bar"><div class="coverage_complete" style="width:77%"></div><div class="coverage_ledgend">10/13</div></div></td>
+        </tr>
+
+        <tr>
             <td><a href="./SMSStore.java.html">SMSStore.java</a></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">6/6</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">1/1</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">7/7</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">2/2</div></div></td>
         </tr>
 
         <tr>
